objects/Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>New Field created by AutoRABIT</description>
        <label>Field1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test123__c</fullName>
        <description>New Field created by AutoRABIT</description>
        <label>Test</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldvalue1__c</fullName>
        <description>New Field created by AutoRABIT</description>
        <label>fieldvalue1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testfield_abc1__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testfield-abc1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testfield_abc2__c</fullName>
        <formula>12345</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testfield-abc2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom_Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom_Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>